translated into Ukrainian

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Студия</title>
+    <title>Студія</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2? family = Raleway & display = swap"
-      rel=" таблица стилей "
+      rel=" таблиця стилів "
     />
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
@@ -21,18 +21,18 @@
             >
             <ul class="header__list">
               <li class="header__li">
-                <a class="header__link" href="./index.html">Студия</a>
+                <a class="header__link" href="./index.html">Студія</a>
               </li>
               <li class="header__li">
                 <a href="./portfolio.html" class="header__link-stydia"
-                  >Портфолио</a
+                  >Портфоліо</a
                 >
               </li>
               <li class="header__li">
-                <a href="#contact" class="header__link-stydia">Контакты</a>
+                <a href="#contact" class="header__link-stydia">Контакти</a>
               </li>
             </ul>
-            <!-- кнопка открытия мобильного меню -->
+            <!-- кнопка відкриття мобільного меню -->
             <button
               type="button"
               class="menu__button js-open-menu"
@@ -76,15 +76,15 @@
               </button>
               <ul class="mobile__linke">
                 <li class="mobile__items">
-                  <a href="./index.html" class="mobile__stydia">Студия</a>
+                  <a href="./index.html" class="mobile__stydia">Студія</a>
                 </li>
                 <li class="mobile__items">
                   <a href="./portfolio.html" class="mobile__stydia"
-                    >Портфолио</a
+                    >Портфоліо</a
                   >
                 </li>
                 <li class="mobile__items">
-                  <a href="#contact" class="mobile__stydia">Контакты</a>
+                  <a href="#contact" class="mobile__stydia">Контакти</a>
                 </li>
               </ul>
               <ul class="mobile__contacts">
@@ -109,10 +109,10 @@
     <main>
       <section class="section__main">
         <div class="container main__container">
-          <h1 class="main__heading">Эффективные решения для вашего бизнеса</h1>
+          <h1 class="main__heading">Ефективні рішення для вашого бізнесу</h1>
           <a class="main__key">
             <button type="button" class="main__button" data-modal-open>
-              Заказать услугу
+              Замовити послугу
             </button>
           </a>
           <!--<span class="icon__fon">
@@ -131,12 +131,12 @@
           </div>
           <form class="modal__form">
             <h2 class="modal__heading">
-              Оставьте свои данные, мы вам перезвоним
+              Залишіть свої дані, ми вам передзвонимо
             </h2>
             <div class="modal__input">
               <div class="modal__input-svg">
                 <label for="user" class="modal__name"
-                  >Имя
+                  >Ім'я
                   <input
                     type="text"
                     name="name"
@@ -164,7 +164,7 @@
               </div>
               <div class="modal__input-svg">
                 <label for="mail" class="modal__name"
-                  >Почта
+                  >Пошта
                   <input
                     type="email"
                     name="email"
@@ -178,11 +178,11 @@
               </div>
               <div class="modal__input-svg">
                 <label for="comment" class="modal__name"
-                  >Комментарий
+                  >Коментар
                   <textarea
                     name="comment"
                     id="comment"
-                    placeholder="Введите текст"
+                    placeholder="Ввведіть текст"
                     rows="8"
                     class="modal__input-name modal__text-comment"
                   ></textarea>
@@ -192,12 +192,12 @@
             <div class="modal__checkbox">
               <input type="checkbox" name="checkbox" id="check" />
               <label for="check" class="modal__contract"
-                >Соглашаюсь с рассылкой и принимаю
-                <a class="modal__agreement">Условия договора</a></label
+                >Погоджуюся з розсилкою та приймаю
+                <a class="modal__agreement">Умови договору</a></label
               >
             </div>
             <div class="modal__submint">
-              <button type="submit" class="modal__button">Отправить</button>
+              <button type="submit" class="modal__button">Відправити</button>
             </div>
           </form>
         </div>
@@ -212,10 +212,10 @@
                 <use href="./images/sprite.svg#icon-antenna-1"></use>
               </svg>
             </div>
-            <h3 class="text__heading">Внимание к деталям</h3>
+            <h3 class="text__heading">Увага до деталей</h3>
             <p class="text__paragraph">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
+              Ідейні міркування, а також початок повсякденної роботи з
+              формування позиції.
             </p>
           </div>
           <div class="section__element">
@@ -224,10 +224,10 @@
                 <use href="./images/sprite.svg#icon-clock-1"></use>
               </svg>
             </div>
-            <h3 class="text__heading">Пунктуальность</h3>
+            <h3 class="text__heading">Пунктуальність</h3>
             <p class="text__paragraph">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
+              Завдання організації, особливо ж рамки та місце навчання кадрів
+              тягне за собою.
             </p>
           </div>
           <div class="section__element">
@@ -236,10 +236,9 @@
                 <use href="./images/sprite.svg#icon-diagram-1"></use>
               </svg>
             </div>
-            <h3 class="text__heading">Планирование</h3>
+            <h3 class="text__heading">Планування</h3>
             <p class="text__paragraph">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
+              Також консультація з широким активом у значному ступеню зумовлює.
             </p>
           </div>
           <div class="section__element">
@@ -248,10 +247,10 @@
                 <use href="./images/sprite.svg#icon-astronaut-1"></use>
               </svg>
             </div>
-            <h3 class="text__heading">Современные технологии</h3>
+            <h3 class="text__heading">Сучасні технології</h3>
             <p class="text__paragraph">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
+              Значимість цих проблем настільки очевидна, що реалізація планових
+              завдань.
             </p>
           </div>
         </section>
@@ -259,7 +258,7 @@
     </section>
     <section class="section__foto">
       <div class="container">
-        <h2 class="foto__heading">Чем мы занимаемся</h2>
+        <h2 class="foto__heading">Чим ми займаємося</h2>
         <ul class="foto__list">
           <li class="foto__item">
             <img
@@ -271,7 +270,7 @@
               alt="Десктоп"
               width="370"
             />
-            <p class="foto__text">Десктопные приложения</p>
+            <p class="foto__text">Десктопні програми</p>
           </li>
           <li class="foto__item">
             <img
@@ -279,7 +278,7 @@
               src="images/mobile_img_pc1x.jpg"
               alt="телефон"
             />
-            <p class="foto__text">Мобильные приложения</p>
+            <p class="foto__text">Мобільні програми</p>
           </li>
           <li class="foto__item">
             <img
@@ -291,7 +290,7 @@
               alt="планшет"
               width="370"
             />
-            <p class="foto__text">Дизайнерские решения</p>
+            <p class="foto__text">Дизайнерскі рішення</p>
           </li>
         </ul>
       </div>
@@ -334,7 +333,7 @@
                   </picture>
                 </div>
                 <div class="card__content">
-                  <h3 class="team__name">Игорь Демьяненко</h3>
+                  <h3 class="team__name">Ігор Дем'яненко</h3>
                   <p class="team__position">Designer</p>
                   <ul class="set__network">
                     <li class="network__item">
@@ -397,12 +396,12 @@
                     <img
                       class="team__images"
                       src="images/img2.jpg"
-                      alt="Разработчик"
+                      alt="Розробник"
                     />
                   </picture>
                 </div>
                 <div class="card__content">
-                  <h3 class="team__name">Ольга Репина</h3>
+                  <h3 class="team__name">Ольга Рєпіна</h3>
                   <p class="team__position">Frontend Developer</p>
                   <ul class="set__network">
                     <li class="network__item">
@@ -470,7 +469,7 @@
                   </picture>
                 </div>
                 <div class="card__content">
-                  <h3 class="team__name">Николай Тарасов</h3>
+                  <h3 class="team__name">Микола Тарасов</h3>
                   <p class="team__position">Marketing</p>
                   <ul class="set__network">
                     <li class="network__item">
@@ -538,7 +537,7 @@
                   </picture>
                 </div>
                 <div class="card__content">
-                  <h3 class="team__name">Михаил Ермаков</h3>
+                  <h3 class="team__name">Михайло Єрмаков</h3>
                   <p class="team__position">UI Designer</p>
                   <ul class="set__network">
                     <li class="network__item">
@@ -580,7 +579,7 @@
     <section>
       <div class="container">
         <section>
-          <h2 class="customer__heading">Постоянные клиенты</h2>
+          <h2 class="customer__heading">Постійні клієнти</h2>
           <ul class="customer__list">
             <li class="customer__logo">
               <a class="regular__customer">
@@ -636,7 +635,7 @@
               ><span class="header__logo">Web</span>Studio</a
             >
             <address class="footer__address">
-              г. Киев, пр-т Леси Украинки, 26<br />
+              м. Київ, пр-т Лесі Українки, 26<br />
               <a href="mailto:info@devstudio.com" class="footer__contacts"
                 >info@devstudio.com</a
               ><br />
@@ -647,7 +646,7 @@
           </section>
           <section class="footer__section">
             <div class="footer__connect">
-              <h2 class="footer__heading">присоединяйтесь</h2>
+              <h2 class="footer__heading">приєднуйтесь</h2>
               <ul class="footer__list">
                 <li class="footer__items">
                   <a class="footer__network">
@@ -682,7 +681,7 @@
           </section>
           <section class="footer__form footer__section">
             <form>
-              <h2 class="form__heading">Подпишитесь на рассылку</h2>
+              <h2 class="form__heading">Підпишіться на розсилку</h2>
               <div class="form__div">
                 <div class="form__label">
                   <input
@@ -693,7 +692,7 @@
                   />
                   <label for="email" class="footer__label">E-mail</label>
                   <button type="submit" class="footer__button">
-                    Подписаться
+                    Підписатися
                     <svg class="footer__telegram">
                       <use href="./images/sprite.svg#icon-icon-send"></use>
                     </svg>
