--- a/portfolio.html
+++ b/portfolio.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Портфолио</title>
+    <title>Портфоліо</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2? family = Raleway & display = swap"
-      rel=" таблица стилей "
+      rel=" таблиця стилів "
     />
     <link rel="stylesheet" href="./index.html" />
     <link rel="stylesheet" href="./css/portfolio.min.css" />
@@ -21,16 +21,16 @@
           >
           <ul class="header__list">
             <li class="header__li">
-              <a href="./index.html" class="header__link-stydia">Студия</a>
+              <a href="./index.html" class="header__link-stydia">Студія</a>
             </li>
             <li class="header__li">
-              <a href="./portfolio.html" class="header__link">Портфолио</a>
+              <a href="./portfolio.html" class="header__link">Портфоліо</a>
             </li>
             <li class="header__li">
-              <a href="#contact" class="header__link-stydia">Контакты</a>
+              <a href="#contact" class="header__link-stydia">Контакти</a>
             </li>
           </ul>
-          <!-- кнопка открытия мобильного меню -->
+          <!-- кнопка відкриття мобільного меню -->
           <button
             type="button"
             class="menu__button js-open-menu"
@@ -78,13 +78,13 @@
             </button>
             <ul class="mobile__linke">
               <li class="mobile__items">
-                <a href="./index.html" class="mobile__stydia">Студия</a>
+                <a href="./index.html" class="mobile__stydia">Студія</a>
               </li>
               <li class="mobile__items">
-                <a href="./portfolio.html" class="mobile__stydia">Портфолио</a>
+                <a href="./portfolio.html" class="mobile__stydia">Портфоліо</a>
               </li>
               <li class="mobile__items">
-                <a href="#contact" class="mobile__stydia">Контакты</a>
+                <a href="#contact" class="mobile__stydia">Контакти</a>
               </li>
             </ul>
             <ul class="mobile__contacts">
@@ -104,23 +104,23 @@
     <section>
       <div class="container">
         <section class="section__bloсk">
-          <h1 class="visually__hidden">скрытый заголовок</h1>
+          <h1 class="visually__hidden">прихований заголовок</h1>
           <section>
             <div class="section__button">
               <ul class="button__list">
                 <li class="button__items">
                   <button type="button" class="button__name button__vse">
-                    Все
+                    Усе
                   </button>
                 </li>
                 <li class="button__items">
                   <button type="button" class="button__name button__web">
-                    Веб-сайты
+                    Веб-сайти
                   </button>
                 </li>
                 <li class="button__items">
                   <button type="button" class="button__name button__aplication">
-                    Приложение
+                    Програми
                   </button>
                 </li>
                 <li class="button__items">
@@ -171,10 +171,10 @@
                       </picture>
                       <div class="cart__overlay">
                         <p1 class="slot__text"
-                          >Технокряк это современная площадка распространения
-                          коронавируса. Компании используют эту платформу для
-                          цифрового шпионажа и атак на защищённые сервера
-                          конкурентов.</p1
+                          >Технокряк це сучасний майданчик поширення
+                          коронавірусу. Компанії використовують цю платформу для
+                          цифрового шпигунства та атак на захищені сервери
+                          конкурентів.</p1
                         >
                       </div>
                     </div>
@@ -216,10 +216,10 @@
                       </picture>
                       <div class="cart__overlay">
                         <p1 class="slot__text"
-                          >Технокряк это современная площадка распространения
-                          коронавируса. Компании используют эту платформу для
-                          цифрового шпионажа и атак на защищённые сервера
-                          конкурентов.</p1
+                          >Технокряк це сучасний майданчик поширення
+                          коронавірусу. Компанії використовують цю платформу для
+                          цифрового шпигунства та атак на захищені сервери
+                          конкурентів.</p1
                         >
                       </div>
                     </div>
@@ -258,21 +258,21 @@
                         />
                         <img
                           src="images/portfolio_img/restoran_pc1x.jpg"
-                          alt="Приложение"
+                          alt="Програма"
                         />
                       </picture>
                       <div class="cart__overlay">
                         <p1 class="slot__text"
-                          >Технокряк это современная площадка распространения
-                          коронавируса. Компании используют эту платформу для
-                          цифрового шпионажа и атак на защищённые сервера
-                          конкурентов.</p1
+                          >Технокряк це сучасний майданчик поширення
+                          коронавірусу. Компанії використовують цю платформу для
+                          цифрового шпигунства та атак на захищені сервери
+                          конкурентів.</p1
                         >
                       </div>
                     </div>
                     <div class="slot__description">
                       <h2 class="slot__heading">Ресторан Seafood</h2>
-                      <p class="slot__name">Приложение</p>
+                      <p class="slot__name">Програма</p>
                     </div>
                   </a>
                 </li>
@@ -306,18 +306,17 @@
                           alt="Маркетинг"
                         />
                       </picture>
-
                       <div class="cart__overlay">
                         <p1 class="slot__text"
-                          >Технокряк это современная площадка распространения
-                          коронавируса. Компании используют эту платформу для
-                          цифрового шпионажа и атак на защищённые сервера
-                          конкурентов.</p1
+                          >Технокряк це сучасний майданчик поширення
+                          коронавірусу. Компанії використовують цю платформу для
+                          цифрового шпигунства та атак на захищені сервери
+                          конкурентів.</p1
                         >
                       </div>
                     </div>
                     <div class="slot__description">
-                      <h2 class="slot__heading">Проект Prime</h2>
+                      <h2 class="slot__heading">Проєкт Prime</h2>
                       <p class="slot__name">Маркетинг</p>
                     </div>
                   </a>
@@ -349,21 +348,21 @@
                         />
                         <img
                           src="images/portfolio_img/box_img_pc1x.jpg"
-                          alt="Приложение"
+                          alt="Програма"
                         />
                       </picture>
                       <div class="cart__overlay">
                         <p1 class="slot__text"
-                          >Технокряк это современная площадка распространения
-                          коронавируса. Компании используют эту платформу для
-                          цифрового шпионажа и атак на защищённые сервера
-                          конкурентов.</p1
+                          >Технокряк це сучасний майданчик поширення
+                          коронавірусу. Компанії використовують цю платформу для
+                          цифрового шпигунства та атак на захищені сервери
+                          конкурентів.</p1
                         >
                       </div>
                     </div>
                     <div class="slot__description">
-                      <h2 class="slot__heading">Проект Boxes</h2>
-                      <p class="slot__name">Приложение</p>
+                      <h2 class="slot__heading">Проєкт Boxes</h2>
+                      <p class="slot__name">Програма</p>
                     </div>
                   </a>
                 </li>
@@ -399,10 +398,10 @@
                       </picture>
                       <div class="cart__overlay">
                         <p1 class="slot__text"
-                          >Технокряк это современная площадка распространения
-                          коронавируса. Компании используют эту платформу для
-                          цифрового шпионажа и атак на защищённые сервера
-                          конкурентов.</p1
+                          >Технокряк це сучасний майданчик поширення
+                          коронавірусу. Компанії використовують цю платформу для
+                          цифрового шпигунства та атак на захищені сервери
+                          конкурентів.</p1
                         >
                       </div>
                     </div>
@@ -444,15 +443,15 @@
                       </picture>
                       <div class="cart__overlay">
                         <p1 class="slot__text"
-                          >Технокряк это современная площадка распространения
-                          коронавируса. Компании используют эту платформу для
-                          цифрового шпионажа и атак на защищённые сервера
-                          конкурентов.</p1
+                          >Технокряк це сучасний майданчик поширення
+                          коронавірусу. Компанії використовують цю платформу для
+                          цифрового шпигунства та атак на захищені сервери
+                          конкурентів.</p1
                         >
                       </div>
                     </div>
                     <div class="slot__description">
-                      <h2 class="slot__heading">Издание Limited Edition</h2>
+                      <h2 class="slot__heading">Видавництво Limited Edition</h2>
                       <p class="slot__name">Дизайн</p>
                     </div>
                   </a>
@@ -489,15 +488,15 @@
                       </picture>
                       <div class="cart__overlay">
                         <p1 class="slot__text"
-                          >Технокряк это современная площадка распространения
-                          коронавируса. Компании используют эту платформу для
-                          цифрового шпионажа и атак на защищённые сервера
-                          конкурентов.</p1
+                          >Технокряк це сучасний майданчик поширення
+                          коронавірусу. Компанії використовують цю платформу для
+                          цифрового шпигунства та атак на захищені сервери
+                          конкурентів.</p1
                         >
                       </div>
                     </div>
                     <div class="slot__description">
-                      <h2 class="slot__heading">Проект LAB</h2>
+                      <h2 class="slot__heading">Проєкт LAB</h2>
                       <p class="slot__name">Маркетинг</p>
                     </div>
                   </a>
@@ -529,21 +528,21 @@
                         />
                         <img
                           src="images/portfolio_img/business_pc1x.jpg"
-                          alt="Приложение"
+                          alt="Програма"
                         />
                       </picture>
                       <div class="cart__overlay">
                         <p1 class="slot__text"
-                          >Технокряк это современная площадка распространения
-                          коронавируса. Компании используют эту платформу для
-                          цифрового шпионажа и атак на защищённые сервера
-                          конкурентов.</p1
+                          >Технокряк це сучасний майданчик поширення
+                          коронавірусу. Компанії використовують цю платформу для
+                          цифрового шпигунства та атак на захищені сервери
+                          конкурентів.</p1
                         >
                       </div>
                     </div>
                     <div class="slot__description">
                       <h2 class="slot__heading">Growing Business</h2>
-                      <p class="slot__name">Приложение</p>
+                      <p class="slot__name">Програма</p>
                     </div>
                   </a>
                 </li>
@@ -560,7 +559,7 @@
             ><span class="header__logo">Web</span>Studio</a
           >
           <address class="footer__address">
-            г. Киев, пр-т Леси Украинки, 26<br />
+            м. Київ, пр-т Лесі Українки, 26<br />
             <a href="mailto:info@devstudio.com" class="footer__contacts"
               >info@devstudio.com</a
             ><br />
@@ -571,7 +570,7 @@
         </section>
         <section class="footer__section">
           <div class="footer__connect">
-            <h2 class="footer__heading">присоединяйтесь</h2>
+            <h2 class="footer__heading">приєднуйтесь</h2>
             <ul class="footer__list">
               <li class="footer__items">
                 <a class="footer__network">
@@ -606,7 +605,7 @@
         </section>
         <section class="footer__form footer__section">
           <form>
-            <h2 class="form__heading">Подпишитесь на рассылку</h2>
+            <h2 class="form__heading">Підпишіться на розсилку</h2>
             <div class="form__div">
               <div class="form__label">
                 <input
@@ -617,7 +616,7 @@
                 />
                 <label for="email" class="footer__label">E-mail</label>
                 <button type="submit" class="footer__button">
-                  Подписаться
+                  Підписатися
                   <svg class="footer__telegram">
                     <use href="./images/sprite.svg#icon-icon-send"></use>
                   </svg>
